--- a/server/pom.xml
+++ b/server/pom.xml
@@ -81,6 +81,11 @@
         </dependency>
 
         <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.xinxin</groupId>
             <artifactId>order-common</artifactId>
         </dependency>
